--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     <h2>Education</h2>
                     <ul>
                         <li>
-                            <strong><i>Ho Chi Minh City Open University</i></strong>
+                            <strong><i>Ho Chi Minh City Open University (HCMCOU)</i></strong>
                             <div style="opacity: 0.8;">Computer Science | (2023 - 2027)</div>
                         </li>
                         <li>
