bonus 1 star for Java

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                         <li class="skill-item">
                             <span>Java</span>
                             <div class="star-rating">
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
                             </div>
                         </li>
                         <li class="skill-item">
